--- a/Week1/Week1_CompTest_Assignment.Rmd
+++ b/Week1/Week1_CompTest_Assignment.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Week 1 Assignment: R Test"
-author: "Student Name"
+author: "Savannah Bennett"
 date: "`r format(Sys.time(), '%d %B, %Y')`"
 output: pdf_document
 ---
@@ -24,13 +24,13 @@ It is due on **January 18^th^, 2015 at Noon**.
 
     Ex. Print "*Hello, World!*"
 ```{r}
-
+print("Hello World!")
 
 ```
 
     Now, print your own statement
 ```{r}
-
+print("Hello!")
 
 ```
 
