--- a/Week3-Beta/beta_assignment.Rmd
+++ b/Week3-Beta/beta_assignment.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Assignment: Among Site (Beta) Diversity"
-author: "Student Name; Z620: Quantitative Biodiversity, Indiana University"
+author: "Savannah Bennett; Z620: Quantitative Biodiversity, Indiana University"
 date: "`r format(Sys.time(), '%d %B, %Y')`"
 output: pdf_document
 geometry: margin=2.54cm
@@ -43,9 +43,9 @@ In the R code chunk below, provide the code to:
 4. load the `vegan` R package (be sure to install if needed).  
 
 ```{r}
-
-
-
+rm(list=ls())
+getwd()
+setwd("~/GitHub/QB2017_Bennett/Week3-Beta/")
 
 ```
 
@@ -57,6 +57,10 @@ In the R code chunk below, do the following:
 2. explore the structure of the dataset.
 
 ```{r}
+install.packages(ade4)
+data(doubs)
+str(doubs, max.level=1)
+head(doubs$env)
 
 
 
@@ -93,11 +97,38 @@ In the R code chunk below, do the following:
 2. use this function to analyze various aspects of $\beta$-diversity in the Doubs River.  
 
 ```{r}
+beta.w <- function(site.by.species = "") {
+  SbyS.pa <- decostand(site.by.species, method = "pa")
+  S <- ncol(SbyS.pa[, which(colSums(SbyS.pa) >0)])
+  a.bar <- mean(specnumber(SbyS.pa))
+  b.w <- round(S/a.bar, 3)
+  return(b.w)
+}
+
+beta.w <- function(site.by.species = "", sitenum1 = "", sitenum2 = "", pairwise = FALSE) {
+  if (pairwise == TRUE) {
+    if (sitenum1 == "" | sitenum2 == "") {
+      print("Error: please specify sites to compare")
+      return(NA)}
+    site1 = site.by.species [sitenum1,]
+    site2 = site.by.species [sitenum2,]
+    site1 = subset(site1, select = site1 > 0)
+    site2 = subset(site2, select = site2 > 0)
+    gamma = union(colnames(site1), colnames(site2))
+    s = length(gamma)
+    a.bar = mean(c(specnumber(site1), specnumber(site2)))
+    b.w. = round(s/a.bar - 1,3)
+    return(b.w)
+  }
+  else{SbyS.pa} <- decostand(site.by.species, method ="pa")
+  S <- ncol(Sbys.pa[,which(colSums(SbyS.pa) > 0)])
+  a.bar <- mean(specnumber(SbyS.pa))
+  b.w <- round(S/abar, 3)
+  return(b.w)
+}
 
 
-
-
-
+beta.w(doubs$fish, )
 
 
 
