--- a/Week3-Beta/beta_assignment.Rmd
+++ b/Week3-Beta/beta_assignment.Rmd
@@ -43,15 +43,9 @@ In the R code chunk below, provide the code to:
 4. load the `vegan` R package (be sure to install if needed).  
 
 ```{r}
-<<<<<<< HEAD
 rm(list = ls())
 getwd()
 setwd("C:/Users/Savannah/GitHub/QB2017_Bennett/Week3-Beta")
-=======
-rm(list=ls())
-getwd()
-setwd("~/GitHub/QB2017_Bennett/Week3-Beta/")
->>>>>>> 381c111feebab0438b4b1df5e510f929973cb2a6
 
 ```
 
@@ -63,7 +57,7 @@ In the R code chunk below, do the following:
 2. explore the structure of the dataset.
 
 ```{r}
-<<<<<<< HEAD
+
 package.list <- c('vegan', 'ade4', 'viridis', 'gplots', 'BiodiversityR', 'indicspecies')
 for (package in package.list) {
 if (!require(package,character.only=T,quietly=T)) {
@@ -71,12 +65,7 @@ install.packages(package)
 library(package,character.only=T)
 }
 }
-=======
-install.packages(ade4)
-data(doubs)
-str(doubs, max.level=1)
-head(doubs$env)
->>>>>>> 381c111feebab0438b4b1df5e510f929973cb2a6
+
 
 data(doubs)
 str(doubs,max.level =1)
@@ -116,7 +105,6 @@ In the R code chunk below, do the following:
 2. use this function to analyze various aspects of $\beta$-diversity in the Doubs River.  
 
 ```{r}
-<<<<<<< HEAD
 
 beta.w <-function(site.by.species =""){
 SbyS.pa <- decostand(site.by.species,method ="pa") 
@@ -133,7 +121,7 @@ beta.w2 = function(site.by.species = "", sitenum1 = "", sitenum2 = "", pairwise 
       return(NA)}
     site1 = site.by.species[sitenum1,]
     site2 = site.by.species[sitenum2,]
-=======
+
 beta.w <- function(site.by.species = "") {
   SbyS.pa <- decostand(site.by.species, method = "pa")
   S <- ncol(SbyS.pa[, which(colSums(SbyS.pa) >0)])
@@ -149,13 +137,13 @@ beta.w <- function(site.by.species = "", sitenum1 = "", sitenum2 = "", pairwise 
       return(NA)}
     site1 = site.by.species [sitenum1,]
     site2 = site.by.species [sitenum2,]
->>>>>>> 381c111feebab0438b4b1df5e510f929973cb2a6
+
     site1 = subset(site1, select = site1 > 0)
     site2 = subset(site2, select = site2 > 0)
     gamma = union(colnames(site1), colnames(site2))
     s = length(gamma)
     a.bar = mean(c(specnumber(site1), specnumber(site2)))
-<<<<<<< HEAD
+
     b.w = round(s/a.bar - 1, 3)
     return(b.w)
   }
@@ -171,7 +159,7 @@ beta.w <- function(site.by.species = "", sitenum1 = "", sitenum2 = "", pairwise 
 beta.w2(doubs$fish)
 beta.w2(doubs$fish, 1,2, pairwise=TRUE)
 beta.w2(doubs$fish, 1,10, pairwise=TRUE)
-=======
+
     b.w. = round(s/a.bar - 1,3)
     return(b.w)
   }
@@ -183,8 +171,8 @@ beta.w2(doubs$fish, 1,10, pairwise=TRUE)
 }
 
 
-beta.w(doubs$fish, )
->>>>>>> 381c111feebab0438b4b1df5e510f929973cb2a6
+beta.w(doubs$fish)
+
 
 
 
